[package]
name = "lmdb-rs"
version = "0.4.3"
authors = ["Valerii Hiora <valerii.hiora@gmail.com>"]
license = "MIT"
description = "LMDB bindings"
repository = "https://github.com/vhbit/lmdb-rs"
documentation = "https://vhbit.github.io/lmdb-rs/lmdb_rs"
readme = "README.md"
keywords = ["lmdb", "db", "key-value", "kvs", "kv"]
exclude = [
        ".gitignore",
        ".travis.yml",
        "up_doc.sh",
]

[dependencies.liblmdb-sys]
path = "liblmdb-sys"
version = "0.1.6"

[dependencies]
log = "0.3"
libc = "0.1"
regex = "0.1"
bitflags = "0.1"
