[package]
name = "lmdb-rs"
version = "0.8.0"
authors = ["Valerii Hiora <valerii.hiora@gmail.com>"]
license = "MIT"
description = "LMDB bindings"
repository = "https://github.com/vhbit/lmdb-rs"
documentation = "https://vhbit.github.io/lmdb-rs/lmdb_rs"
readme = "README.md"
keywords = ["lmdb", "db", "key-value", "kvs", "kv"]
exclude = [
        ".gitignore",
        ".travis.yml",
        "up_doc.sh",
]
edition = "2018"

[dependencies.liblmdb-sys]
path = "liblmdb-sys"
version = "0.2.2"

[dependencies]
log = "0.4"
libc = "0.2"
bitflags = "1.3"
